# CS045

./: .gitignore  CMakeLists.txt  main.cpp
alternate_if_then_else/: alternate_if_else.cpp  alternate_if_else.h
credit_card_generator/: cc_generator.cpp  cc_generator.h  todo.md
morseDecoder/: morse.cpp  morse.h
morse_decoder/: morse.cpp
prime_decomposition/: prime_decomposition.cpp  prime_decomposition.h
sets/: sets.cpp  sets.h
seven_segment_display/: display.cpp  display.h
sieve_of_eratosthenes/: sieve.cpp  sieve.h
video_poker/: poker.cpp  poker.h  todo.md
